# stream

./: .bumpversion.toml  .gitignore  README.md  build.sh  meson.build  meson_options.txt  pyproject.debug.toml  pyproject.toml
.github/workflows/: release.yml  wheels-debug.yml  wheels.yml
cpp/: base.h  bufferslot.h  demux.cpp  framed_writer.cpp  framed_writer.h  module.cpp  objectstream.cpp  objectwriter.cpp  persister.cpp  queueentry.h  reader.h  stack.cpp  stream.h  wireformat.h  writer.h
docs/: CONTAINER_SERIALIZATION.md  RECORD_PATH.md
recording/: md5_checksums.json  replay.code-workspace  settings.json
recordings/20250903_142533_205839/: cmd  cwd  env  exe  tracing_config.json
recordings/20250903_142923_438944/: cmd  env  exe
src/: base.h  module.cpp  objectreader.cpp  objectstream.cpp  objectwriter.cpp  reader.h  search.cpp  stack.cpp  stream.h  stream.py  wireformat.h  writer.h
src/retracesoftware/stream/: __init__.py
tests/: conftest.py  test_backpressure 2.py  test_backpressure.py  test_backpressure_regression.py  test_fork 2.py  test_fork.py  test_persister 2.py  test_persister.py  test_stream_smoke.py
